--- a/environment.yml
+++ b/environment.yml
@@ -1,40 +1,42 @@
 name: park_env
 channels:
-  - conda-forge
   - defaults
 dependencies:
   - appnope=0.1.0=py37_0
   - attrs=19.3.0=py_0
   - backcall=0.1.0=py37_0
+  - blas=1.0=mkl
   - bleach=3.1.0=py37_0
-  - boost-cpp=1.70.0=hd59e818_1
-  - bzip2=1.0.8=h01d97ff_1
-  - ca-certificates=2019.9.11=hecc5488_0
-  - cairo=1.14.12=h9d4d9ac_1005
+  - bzip2=1.0.8=h1de35cc_0
+  - ca-certificates=2019.10.16=0
+  - cairo=1.14.12=hc4e6be7_4
   - certifi=2019.9.11=py37_0
-  - click=7.0=py_0
+  - click=7.0=py37_0
   - click-plugins=1.1.1=py_0
-  - cligj=0.5.0=py_0
+  - cligj=0.5.0=py37_0
   - curl=7.65.3=ha441bb4_0
+  - cycler=0.10.0=py37_0
   - dbus=1.13.6=h90a0687_0
   - decorator=4.4.0=py37_1
   - defusedxml=0.6.0=py_0
+  - descartes=1.1.0=py_3
   - entrypoints=0.3=py37_0
   - expat=2.2.6=h0a44026_0
   - fiona=1.8.4=py37h9a122fd_0
-  - fontconfig=2.13.1=h1027ab8_1000
-  - freetype=2.10.0=h24853df_1
-  - freexl=1.0.5=h1de35cc_1002
+  - fontconfig=2.13.0=h5d5b041_1
+  - freetype=2.9.1=hb4e5f40_0
+  - freexl=1.0.5=h1de35cc_0
   - gdal=2.3.3=py37hbe65578_0
-  - geopandas=0.6.1=py_0
-  - geos=3.7.1=h0a44026_1000
+  - geopandas=0.4.1=py_0
+  - geos=3.7.1=h0a44026_0
   - gettext=0.19.8.1=h15daf44_3
-  - giflib=5.1.7=h01d97ff_1
+  - giflib=5.1.4=h1de35cc_1
   - glib=2.56.2=hd9629dc_0
-  - hdf4=4.2.13=0
-  - hdf5=1.10.4=nompi_h0cbb7df_1106
+  - hdf4=4.2.13=h39711bb_2
+  - hdf5=1.10.4=hfa1e0ec_0
   - icu=58.2=h4b95b61_1
   - importlib_metadata=0.23=py37_0
+  - intel-openmp=2019.4=233
   - ipykernel=5.1.2=py37h39e3cac_0
   - ipython=7.8.0=py37h39e3cac_0
   - ipython_genutils=0.2.0=py37_0
@@ -42,16 +44,16 @@ dependencies:
   - jedi=0.15.1=py37_0
   - jinja2=2.10.3=py_0
   - jpeg=9b=he5867d9_2
-  - json-c=0.13.1=h1de35cc_1001
+  - json-c=0.13.1=h3efe00b_0
   - jsonschema=3.1.1=py37_0
   - jupyter=1.0.0=py37_7
   - jupyter_client=5.3.4=py37_0
   - jupyter_console=6.0.0=py37_0
   - jupyter_core=4.6.0=py37_0
-  - kealib=1.4.10=hecf890f_1003
+  - kealib=1.4.7=hf5ed860_6
+  - kiwisolver=1.1.0=py37h0a44026_0
   - krb5=1.16.1=hddcf347_7
-  - libblas=3.8.0=14_openblas
-  - libcblas=3.8.0=14_openblas
+  - libboost=1.67.0=hebc422b_4
   - libcurl=7.65.3=h051b688_0
   - libcxx=4.0.1=hcfea43d_1
   - libcxxabi=4.0.1=hcfea43d_1
@@ -59,32 +61,37 @@ dependencies:
   - libedit=3.1.20181209=hb402a30_0
   - libffi=3.2.1=h475c297_4
   - libgdal=2.3.3=h0950a36_0
-  - libgfortran=3.0.1=0
+  - libgfortran=3.0.1=h93005f0_2
   - libiconv=1.15=hdd342a3_7
-  - libkml=1.3.0=hed7d534_1010
-  - liblapack=3.8.0=14_openblas
+  - libkml=1.3.0=hbe12b63_4
   - libnetcdf=4.6.1=hd5207e6_2
-  - libopenblas=0.3.7=hd44dcd8_1
   - libpng=1.6.37=ha441bb4_0
   - libpq=11.2=h051b688_0
   - libsodium=1.0.16=h3efe00b_0
   - libspatialindex=1.8.5=h2c08c6b_2
-  - libspatialite=4.3.0a=h0cd9627_1026
-  - libssh2=1.8.2=hcdc9a53_2
-  - libtiff=4.0.9=he6b73bb_1
-  - libxml2=2.9.9=hd80cff7_2
+  - libspatialite=4.3.0a=h644ec7d_19
+  - libssh2=1.8.2=ha12b0ac_0
+  - libtiff=4.0.10=hcb84e12_2
+  - libxml2=2.9.9=hf6e021a_1
+  - mapclassify=2.0.1=py_0
   - markupsafe=1.1.1=py37h1de35cc_0
+  - matplotlib=3.1.1=py37h54f8f79_0
   - mistune=0.8.4=py37h1de35cc_0
+  - mkl=2019.4=233
+  - mkl-service=2.3.0=py37hfbe908c_0
+  - mkl_fft=1.0.14=py37h5e564d8_0
+  - mkl_random=1.1.0=py37ha771720_0
   - more-itertools=7.2.0=py37_0
-  - munch=2.3.2=py_0
+  - munch=2.3.2=py37_0
   - nbconvert=5.6.0=py37_1
   - nbformat=4.4.0=py37_0
   - ncurses=6.1=h0a44026_1
   - notebook=6.0.1=py37_0
-  - numpy=1.17.2=py37h6b0580a_0
-  - openjpeg=2.3.1=hc1feee7_0
-  - openssl=1.1.1c=h01d97ff_0
-  - pandas=0.24.2=py37h86efe34_0
+  - numpy=1.17.2=py37h99e6662_0
+  - numpy-base=1.17.2=py37h6575580_0
+  - openjpeg=2.3.0=hb95cd4c_1
+  - openssl=1.1.1d=h1de35cc_3
+  - pandas=0.25.2=py37h0a44026_0
   - pandoc=2.2.3.2=0
   - pandocfilters=1.4.2=py37_1
   - parso=0.5.1=py_0
@@ -92,14 +99,16 @@ dependencies:
   - pexpect=4.7.0=py37_0
   - pickleshare=0.7.5=py37_0
   - pip=19.3.1=py37_0
-  - pixman=0.34.0=h1de35cc_1003
+  - pixman=0.38.0=h1de35cc_0
   - poppler=0.65.0=ha097c24_1
-  - poppler-data=0.4.9=1
-  - proj4=5.2.0=h6de7cb9_1006
+  - poppler-data=0.4.9=0
+  - proj4=5.2.0=h0a44026_1
   - prometheus_client=0.7.1=py_0
   - prompt_toolkit=2.0.10=py_0
+  - psycopg2=2.8.3=py37ha12b0ac_0
   - ptyprocess=0.6.0=py37_0
   - pygments=2.4.2=py_0
+  - pyparsing=2.4.2=py_0
   - pyproj=1.9.6=py37h9c430a6_0
   - pyqt=5.9.2=py37h655552a_2
   - pyrsistent=0.15.4=py37h1de35cc_0
@@ -111,11 +120,13 @@ dependencies:
   - qtconsole=4.5.5=py_0
   - readline=7.0=h1de35cc_5
   - rtree=0.8.3=py37_0
+  - scipy=1.3.1=py37h1410ff5_0
   - send2trash=1.5.0=py37_0
   - setuptools=41.4.0=py37_0
-  - shapely=1.6.4=py37h79c6f3e_1005
+  - shapely=1.6.4=py37he8793f5_0
   - sip=4.19.8=py37h0a44026_0
   - six=1.12.0=py37_0
+  - sqlalchemy=1.3.10=py37h1de35cc_0
   - sqlite=3.30.0=ha441bb4_0
   - terminado=0.8.2=py37_0
   - testpath=0.4.2=py37_0
@@ -126,10 +137,11 @@ dependencies:
   - webencodings=0.5.1=py37_1
   - wheel=0.33.6=py37_0
   - widgetsnbextension=3.5.1=py37_0
-  - xerces-c=3.2.2=h4db8090_1003
+  - xerces-c=3.2.2=h44e365a_0
   - xz=5.2.4=h1de35cc_4
   - zeromq=4.3.1=h0a44026_3
   - zipp=0.6.0=py_0
   - zlib=1.2.11=h1de35cc_3
+  - zstd=1.3.7=h5bba6e5_0
 prefix: /Users/Anna/opt/anaconda3/envs/park_env
 
