--- a/environment.yml
+++ b/environment.yml
@@ -138,6 +138,7 @@ dependencies:
   - wheel=0.33.6=py37_0
   - widgetsnbextension=3.5.1=py37_0
   - xerces-c=3.2.2=h44e365a_0
+  - xlrd=1.2.0=py37_0
   - xz=5.2.4=h1de35cc_4
   - zeromq=4.3.1=h0a44026_3
   - zipp=0.6.0=py_0
