--- a/environment.yml
+++ b/environment.yml
@@ -118,6 +118,7 @@ dependencies:
   - pyzmq=18.1.0=py37h0a44026_0
   - qt=5.9.7=h468cd18_1
   - qtconsole=4.5.5=py_0
+  - rasterio
   - readline=7.0=h1de35cc_5
   - rtree=0.8.3=py37_0
   - scipy=1.3.1=py37h1410ff5_0
@@ -144,5 +145,8 @@ dependencies:
   - zipp=0.6.0=py_0
   - zlib=1.2.11=h1de35cc_3
   - zstd=1.3.7=h5bba6e5_0
-prefix: /Users/Anna/opt/anaconda3/envs/park_env
 
+
+    - pip:
+    - earthpy
+prefix: /Users/Anna/opt/anaconda3/envs/park_env
