--- a/environment_macOS.yml
+++ b/environment_macOS.yml
@@ -120,6 +120,7 @@ dependencies:
   - qtconsole=4.5.5
   - readline=7.0
   - rtree=0.8.3
+  - rasterio
   - scipy=1.3.1
   - send2trash=1.5.0
   - setuptools=41.4.0
@@ -143,5 +144,8 @@ dependencies:
   - zipp=0.6.0
   - zlib=1.2.11
   - zstd=1.3.7
-prefix: /Users/Anna/opt/anaconda3/envs/park_env
 
+    - pip:
+      - earthpy
+      
+prefix: /Users/Anna/opt/anaconda3/envs/park_env
