--- a/environment_windows.yml
+++ b/environment_windows.yml
@@ -99,6 +99,7 @@ dependencies:
   - pyzmq=18.1.0
   - qt=5.9.7
   - qtconsole=4.5.5
+  - rasterio
   - rtree=0.8.3
   - scipy=1.3.1
   - send2trash=1.5.0
@@ -123,4 +124,7 @@ dependencies:
   - zipp=0.6.0
   - zlib=1.2.11
   - zstd=1.3.7
+
+pip:
+  - earthpy
 prefix: /Users/Anna/opt/anaconda3/envs/park_env
